Fixed some alignment issues and updated the tailwind config

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -9,7 +9,7 @@
   h1, h2, h3, h4, h5, h6 {
     font-family: "Poppins", sans-serif;
   }
-  p, span, a, label, button, input, textarea {
+  p, ul, li, span, a, label, button, input, textarea {
     font-family: "Kulim Park", sans-serif;
   }
 }
